--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Divigroup
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://192.168.0.250:5431/postgres
+spring.datasource.username=guillermo
+spring.datasource.password=Guillermo11
 
 debug=true
 
@@ -9,13 +9,13 @@ server.port=8080
 spring.jpa.show-sql=true
 
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 
 # File with sensitive data, such as keys.
-# Don't commit this file to Github/BitBucket
+# Don't commit this file to GitHub/BitBucket
 spring.config.import=optional:file:.env[.properties]
 
 # Enable a multiPartForm to send data to SpringBoot
