--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Divigroup
-spring.datasource.url=jdbc:postgresql://192.168.0.250:5431/postgres
-spring.datasource.username=guillermo
-spring.datasource.password=Guillermo11
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
 debug=true
 
